# fmios-kernel

./: .clang-format  .editorconfig  .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  COPYING  LICENSE.md  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README  README.md  config.sub  configure.ac  configure.in  grub.cfg
.kiro/specs/bootstrap/: bootstrap-testing-methodology.md  design.md  requirements.md  tasks.md
.kiro/specs/build-system/: design.md  requirements.md  tasks.md
.kiro/specs/console/: design.md  requirements.md  tasks.md
.kiro/specs/git-workflow/: design.md  requirements.md  tasks.md
.kiro/specs/ipc/: design.md  requirements.md  tasks.md
.kiro/specs/kernel/: design.md  requirements.md  tasks.md
.kiro/specs/kfs-namespace/: design.md  requirements.md  tasks.md
.kiro/specs/memory/: design.md  requirements.md  tasks.md
.kiro/specs/planning/: CLEANUP_RESULTS.md  INCREMENTAL_DEVELOPMENT_ROADMAP.md  INCREMENTAL_RESTRUCTURING_SUMMARY.md  REFACTORING_SUMMARY.md  SPEC_ORGANIZATION_ANALYSIS.md
.kiro/specs/processes/: requirements.md
.kiro/specs/testing-framework/: design.md  requirements.md  tasks.md
.kiro/specs/threads/: requirements.md
.kiro/steering/: README.md  build-system-requirements.md  code-style.md  git-workflow-requirements.md  kernel-object-safety.md  kfs-statistics-interface.md  multiboot2-qemu-testing.md  qemu-invocation-standard.md  security-and-capabilities.md  spec-development-guidelines.md  task-completion-workflow.md  test-driven-development.md
.kiro/steering/architecture/: README.md  kernel-subsystem-organization.md  naming-conventions.md  private-first-interfaces.md
.kiro/steering/build-system/: README.md  autoconf-build-system.md  build-flags.md  include-paths.md
.kiro/steering/implementation/: README.md  kernel-initialization.md  kobj-safety.md  security-mitigations.md  standard-library-usage.md  synchronization-primitives.md
arch/x86/: Arch.make  boot.S  console.c
arch/x86/include/: io.h  vsta-io.h
arch/x86/include/asm/: config.h  io.h  page.h
arch/x86_64/: Makefile.am  boot_main.c  bootstrap.S  entry.c
arch/x86_64/include/: Makefile.am  arch.h  boot.h
arch/x86_64/lib/: Makefile.am  arch_support.c
include/: Makefile.am  klibc.h  ktypes.h  multiboot.h  multiboot1.h  multiboot2.h  stddef.h  string.h  types.h
include/fmios/: config.h.in  fmios.h  io.h  malloc.h  page.h  serial.h  types.h  video.h
kernel/: Makefile.am  fmi-kernel  kernel.ld  main.c
lib/: Makefile.am  arch  itoa.c  strlen.c
lib/c/: Makefile.am  klog.c  kmalloc.c  kprintf.c
scripts/: check-license-headers.sh  create-topic-branch.sh  install-pre-commit.sh  make-iso.sh  protect-main-branch.sh  qemu-test.sh  setup-git-hooks.sh  validate-branch-name.sh  validate-task-reference.sh
src/: 8250.c  cmdline.c  ega.c  init.c  kmain.c  malloc.c  multiboot.c  printk.c
tests/: Makefile.am  test_build  test_build.c  test_build_properties  test_build_properties.c  test_iso_properties  test_iso_properties.c
