AC_INIT([fmios-kernel], [0.1.1])
AC_CONFIG_AUX_DIR([.])
AC_PREFIX_DEFAULT([])

AC_CANONICAL_HOST

# Locate our toolchain
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_LANG_C

AC_ARG_ENABLE([multiboot1],
	[AS_HELP_STRING([--enable-multiboot1],
	       [Support legacy Multiboot1 bootloaders @<:@default=auto@:>@])],
	[enable_multiboot1=disabled],
	[enable_multiboot1=auto])

# Map the gcc $host_cpu to the fmios/arch sources
case "$host_cpu" in
(i*86)	ARCH=x86;;
(*)	ARCH=$host_cpu
	enable_multiboot1=disabled;;
esac
AC_SUBST([ARCH])

AS_IF([test "x$enable_multiboot1" != xdisabled],
	[AC_DEFINE([CONFIG_ENABLE_MULTIBOOT1], [1],
		[Define to enable legacy Multiboot support])])

AC_CONFIG_HEADER([include/fmios/config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
