AC_INIT([FMI/OS kernel], [0.1.1],,,[http://www.fmios.org])
AC_CONFIG_AUX_DIR([.])
AC_PREFIX_DEFAULT([])

AC_CANONICAL_HOST

# Locate our toolchain
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_LANG_C

AC_ARG_ENABLE([debug],
	[AS_HELP_STRING([--enable-debug],
		[Enable debugging output @<:@default=disabled@:>@])],
	,,[enable_debug=disabled])

AC_ARG_ENABLE([multiboot1],
	[AS_HELP_STRING([--enable-multiboot1],
	       [Support legacy Multiboot1 bootloaders @<:@default=auto@:>@])],
	[enable_multiboot1=disabled],
	[enable_multiboot1=auto])

# Map the gcc $host_cpu to the fmios/arch sources
case "$host_cpu" in
(i*86)	ARCH=x86;;
(*)	ARCH=$host_cpu
	enable_multiboot1=disabled;;
esac
AC_SUBST([ARCH])

AS_IF([test "x$enable_multiboot1" != xdisabled],
	[AC_DEFINE([CONFIG_ENABLE_MULTIBOOT1], [1],
		[Define to enable legacy Multiboot support])])

AS_IF([test "x$enable_debug" != xdisabled],
	[AC_DEFINE([CONFIG_ENABLE_DEBUG], [1],
		[Define to enable debugging output])])

AC_SUBST([PACKAGE_NAME])
AC_SUBST([PACKAGE_VERSION])
AC_CONFIG_HEADER([include/fmios/config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
